--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">presenter-example</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title">Presenter Example</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
 </resources>
